[CCAP-640] Resource Organization data importer